dist/objects/Contact.object
<CustomObject>
    <fields>
        <fullName>A_Level_Maths_Grade__c</fullName>
        <label>A Level Maths Grade</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AcademicRefereeEmail__c</fullName>
        <description>Created by Oscar @ Impact Box, 14/08/2020</description>
        <label>Academic Referee Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>AcademicRefereeName__c</fullName>
        <description>Created by Oscar @ Impact Box, 14/08/2020</description>
        <label>Academic Referee Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Access_to_a_Car__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Access to a Car</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ActiveTutor__c</fullName>
        <formula>MaxSessionDate__c &gt;= TODAY()</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>True if Tutor has sessions scheduled for the future</inlineHelpText>
        <label>Active Tutor</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Advanced_Tutor_Score__c</fullName>
        <formula>X3_Schools__c  +  CPD_Attended__c +  Multiple_Subjects__c +  LAC_AP_Experience__c +  Quality_and_Impact_Score__c +  Co_ordinator_Score__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Advanced Tutor Score</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Advanced_Tutor_Status__c</fullName>
        <formula>AND( Advanced_Tutor_Score__c &gt; 6,  Hours_To_Date__c  &gt; 30, TRUE)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Advanced Tutor Status</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Alumni_Hours_Worked__c</fullName>
        <label>Alumni - Hours Worked</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Alumni_Year_Left__c</fullName>
        <label>Alumni - Year Left</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Application_Score__c</fullName>
        <label>Application Score</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AreaPicklist__c</fullName>
        <label>Area</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Area</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Area__c</fullName>
        <label>Area</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Greater Manchester</fullName>
                </value>
                <value>
                    <fullName>Leeds</fullName>
                </value>
                <value>
                    <fullName>Liverpool</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Area_of_Residence__c</fullName>
        <label>Area of Residence</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Availability_Notes__c</fullName>
        <label>Availability Notes</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>BankAccountName__c</fullName>
        <description>Created by Oscar @ Impact Box, 18/06/2020</description>
        <label>Bank Account Name</label>
        <length>60</length>
        <maskChar>asterisk</maskChar>
        <maskType>all</maskType>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>BankAccountNumber__c</fullName>
        <description>Created by Oscar @ Impact Box, 18/06/2020</description>
        <label>Bank Account Number</label>
        <length>8</length>
        <maskChar>asterisk</maskChar>
        <maskType>all</maskType>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>BankSortCode__c</fullName>
        <description>Created by Oscar @ Impact Box, 18/06/2020</description>
        <label>Bank Sort Code</label>
        <length>6</length>
        <maskChar>asterisk</maskChar>
        <maskType>all</maskType>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>Behaviour_Management__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Behaviour Management</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CPD_Attended__c</fullName>
        <label>CPD Attended</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Co_ordinator_Score__c</fullName>
        <label>Co-ordinator Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CohortUploadMigrationNumber__c</fullName>
        <description>Populated via migration

Oscar Mawby @ Impact Box 28/01/2020</description>
        <label>Cohort Upload Migration Number</label>
        <length>20</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>CohortUpload__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The Cohort Upload that created this record (via dataload and Cohort Upload flow)

Oscar Mawby @ Impact Box 17/12/19</description>
        <inlineHelpText>The Cohort Upload that created this record (via dataload and Cohort Upload flow)</inlineHelpText>
        <label>Cohort Upload</label>
        <referenceTo>CohortUpload__c</referenceTo>
        <relationshipLabel>Contacts</relationshipLabel>
        <relationshipName>Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CommunityUserId__c</fullName>
        <formula>CASESAFEID(CommunityUser__r.Id)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CommunityUserId</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CommunityUser__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>The link to the Community User that has been setup. This will automatically populate via Process Builder</inlineHelpText>
        <label>Community User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Completed_Tutor_Survey_2020__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Completed Tutor Survey 2020?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Contact_Email_2__c</fullName>
        <label>Contact: Email 2</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Contact_Mailing_Street_1__c</fullName>
        <label>Contact: Mailing Street 1</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Mailing_Street_2__c</fullName>
        <label>Contact: Mailing Street 2</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Continuing_2019_20__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Continuing 2019-20</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Coronavirus_Other__c</fullName>
        <label>Coronavirus - Other</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CurrentIncompleteRegisters__c</fullName>
        <description>Created by Oscar Mawby @ Impact Box, 12/08/2020, populated by DLRS</description>
        <label>Current Incomplete Registers</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Current_Role__c</fullName>
        <label>Current Role</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Currently_Working_2019_20__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Currently Working 2019-20</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DBSExpiryDate__c</fullName>
        <description>Created by Oscar Mawby @ Impact Box, September 1st 2020</description>
        <label>DBS Expiry Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DBSNumber__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>Created by Oscar Mawby @ Impact Box, September 1st 2020</description>
        <label>DBS Number</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>DBSStatus__c</fullName>
        <description>Created by Oscar Mawby @ Impact Box, September 1st 2020</description>
        <label>DBS Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Issued</fullName>
                </value>
                <value>
                    <fullName>Initiated</fullName>
                </value>
                <value>
                    <fullName>Docs required</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Date_of_Birth__c</fullName>
        <label>Date of Birth</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>EAL__c</fullName>
        <defaultValue>false</defaultValue>
        <label>EAL</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>English_Subject_Knowledge_Score__c</fullName>
        <label>English Subject Knowledge Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Ethnicity__c</fullName>
        <description>Oscar Mawby @ Impact Box 17/12/19</description>
        <label>Ethnicity</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Placeholder1</fullName>
                </value>
                <value>
                    <fullName>Placeholder2</fullName>
                </value>
                <value>
                    <fullName>Asian – Bangladeshi ABAN</fullName>
                </value>
                <value>
                    <fullName>Asian - Chinese ACHN</fullName>
                </value>
                <value>
                    <fullName>Asian – Indian AIND</fullName>
                </value>
                <value>
                    <fullName>Asian – Pakistani APKN</fullName>
                </value>
                <value>
                    <fullName>Any Other Asian Background AOAB</fullName>
                </value>
                <value>
                    <fullName>Black – African BAFR</fullName>
                </value>
                <value>
                    <fullName>Black – Caribbean BCRB</fullName>
                </value>
                <value>
                    <fullName>Any Other Black Background AOBB</fullName>
                </value>
                <value>
                    <fullName>White – British WBRI</fullName>
                </value>
                <value>
                    <fullName>White – European WEUR</fullName>
                </value>
                <value>
                    <fullName>Any Other White Background AOWB</fullName>
                </value>
                <value>
                    <fullName>Mixed White and Asian MWAS</fullName>
                </value>
                <value>
                    <fullName>Mixed White and Black Caribbean MWBC</fullName>
                </value>
                <value>
                    <fullName>Mixed White and Black African MWBA</fullName>
                </value>
                <value>
                    <fullName>Any Other Mixed Background AOMB</fullName>
                </value>
                <value>
                    <fullName>Gypsy / Roma ROMA</fullName>
                </value>
                <value>
                    <fullName>Any Other Ethnic Group AOEG</fullName>
                </value>
                <value>
                    <fullName>Refused REFU</fullName>
                </value>
                <value>
                    <fullName>ABAN</fullName>
                </value>
                <value>
                    <fullName>ACHN</fullName>
                </value>
                <value>
                    <fullName>AIND</fullName>
                </value>
                <value>
                    <fullName>APKN</fullName>
                </value>
                <value>
                    <fullName>AOAB</fullName>
                </value>
                <value>
                    <fullName>BAFR</fullName>
                </value>
                <value>
                    <fullName>BCRB</fullName>
                </value>
                <value>
                    <fullName>AOBB</fullName>
                </value>
                <value>
                    <fullName>WBRI</fullName>
                </value>
                <value>
                    <fullName>WEUR</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Experience_in_Online_Tuition__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Experience in Online Tuition</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>February_Hours__c</fullName>
        <label>February Hours</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Field_of_Work__c</fullName>
        <label>Field of Work</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Arts and Entertainment</fullName>
                </value>
                <value>
                    <fullName>Business</fullName>
                </value>
                <value>
                    <fullName>Education</fullName>
                </value>
                <value>
                    <fullName>Higher Education</fullName>
                </value>
                <value>
                    <fullName>Media</fullName>
                </value>
                <value>
                    <fullName>Public Sector</fullName>
                </value>
                <value>
                    <fullName>Self-Employed</fullName>
                </value>
                <value>
                    <fullName>Third Sector</fullName>
                </value>
                <value>
                    <fullName>STEM</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>GCSE_English_Grade__c</fullName>
        <label>GCSE English Grade</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GCSE_Maths_Grade__c</fullName>
        <label>GCSE Maths Grade</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Gender__c</fullName>
        <label>Tutor Gender</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Female</fullName>
                </value>
                <value>
                    <fullName>Male</fullName>
                </value>
                <value>
                    <fullName>Prefer Not to Say</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>General_Notes__c</fullName>
        <label>General Notes</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Geolocation__c</fullName>
        <label>Geolocation</label>
        <scale>15</scale>
        <type>Location</type>
    </fields>
    <fields>
        <fullName>Higher_Maths_Tutor2__c</fullName>
        <formula>AND(OR(A_Level_Maths_Grade__c = &quot;A*&quot;, A_Level_Maths_Grade__c = &quot;A&quot;,  A_Level_Maths_Grade__c = &quot;B&quot;, TRUE),  Maths_Subject_Knowledge_Score_20__c &gt; 15, TRUE)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Higher Maths Tutor2</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Higher_Maths_Tutor__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Higher Maths Tutor</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Hours_2017_18__c</fullName>
        <label>Hours 2017-18</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Hours_2018_19__c</fullName>
        <label>Hours 2018-19</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Hours_2019_20__c</fullName>
        <label>Hours 2019-20</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Hours_To_Date__c</fullName>
        <formula>Total_Hours__c + Hours_2019_20__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Hours To Date</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Interested_in_Online__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Interested in Online?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Interested_in_Teaching__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Interested in Teaching</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Interview_Q2_Score__c</fullName>
        <label>Interview Q2 Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Interview_Q3_Score__c</fullName>
        <label>Interview Q3 Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Interview_Q4_Score__c</fullName>
        <label>Interview Q4 Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Interview_Score__c</fullName>
        <label>Interview Score</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>IsMyContact__c</fullName>
        <formula>$User.ContactId =  Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is My Contact</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Issue_Format__c</fullName>
        <label>Issue Format</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>COMP SLIP</fullName>
                </value>
                <value>
                    <fullName>EMAIL</fullName>
                </value>
                <value>
                    <fullName>LETTER</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LAC_AP_Experience__c</fullName>
        <label>LAC / AP Experience</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Lesson_Observation__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Lesson Observation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Lesson_Plan_Spot_Check__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Lesson Plan Spot Check</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Lesson_Planning__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Lesson Planning</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LinkedIn_Profile__c</fullName>
        <description>LinkedIn Profile</description>
        <label>LinkedIn Profile</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Local_Tutor__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Local Tutor</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Maths_Subject_Knowledge_Score_20__c</fullName>
        <label>Maths Subject Knowledge Score /20</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MaxSessionDate__c</fullName>
        <description>The Session Date furthest in the future scheduled for this tutor.

Oscar Mawby @ Impact Box 21/01/20</description>
        <label>Max Session Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Monitored_Online__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Monitored Online</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Multiple_Subjects__c</fullName>
        <label>Multiple Subjects</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Organisation__c</fullName>
        <label>Organisation</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Other_CPD__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Other CPD</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OverallAttendancePerc__c</fullName>
        <formula>TotalAttendances__c 

/

 TotalAbsences__c +  TotalAttendances__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Overall Attendance %</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Own_DBS__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Own DBS</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PersonalRefereeEmail__c</fullName>
        <description>Created by Oscar @ Impact Box, 14/08/2020</description>
        <label>Personal Referee Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>PersonalRefereeName__c</fullName>
        <description>Created by Oscar @ Impact Box, 14/08/2020</description>
        <label>Personal Referee Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QualificationStatus__c</fullName>
        <description>Created by Oscar @ Impact Box, 17/08/2020</description>
        <label>Qualification Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Training Completed</fullName>
                    <default>true</default>
                    <label>Training In Progress</label>
                </value>
                <value>
                    <fullName>Referencing</fullName>
                </value>
                <value>
                    <fullName>Complete</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Quality_Check_2018_19__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Quality Check 2018-19</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Quality_and_Impact_Score__c</fullName>
        <label>Quality and Impact Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ReferencesApproved__c</fullName>
        <description>Created by Oscar @ Impact Box, 17/08/2020</description>
        <label>References Approved</label>
        <summaryFilterItems>
            <field>Reference__c.Status__c</field>
            <operation>equals</operation>
            <value>Approved</value>
        </summaryFilterItems>
        <summaryForeignKey>Reference__c.Tutor__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>ReferencesRequested__c</fullName>
        <description>Created by Oscar @ Impact Box, 17/08/2020</description>
        <inlineHelpText>Populated by moving to referencing status, this field being populated will stop new references from being requested in the the future too.</inlineHelpText>
        <label>References Requested</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>RequestReferencesAutomatically__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Created by Oscar @ Impact Box, 14/08/2020</description>
        <inlineHelpText>Leaving this checked will mean the referees are automatically sent the referencing form when status is set to &apos;Referencing&apos;.</inlineHelpText>
        <label>Request References Automatically?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SchoolType__c</fullName>
        <label>School Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>School_Type</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>School_Affiliations__c</fullName>
        <label>School Affiliations</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>School_Type__c</fullName>
        <label>School Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Primary</fullName>
                </value>
                <value>
                    <fullName>Secondary</fullName>
                </value>
                <value>
                    <fullName>Primary and Secondary</fullName>
                </value>
                <value>
                    <fullName>AP / LAC</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Schools_Previously_Worked_In__c</fullName>
        <label>Schools Previously Worked In</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Science_Subject_Knowledge_Score__c</fullName>
        <label>Science Subject Knowledge Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SecondarySchoolSubjects__c</fullName>
        <label>Secondary School Subjects</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Subjects</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>SecondarySubjectArea__c</fullName>
        <description>Created by Oscar @ Impact Box 24/06/2020, to replace &apos;Secondary Skill Set&apos;</description>
        <label>Secondary Subject Area</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Subjects</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Self_isolating__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Self-isolating</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Self_isolation_end_date__c</fullName>
        <label>Self-isolation end date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Staying_at_term_time_address__c</fullName>
        <label>Staying at term-time address</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Unknown</fullName>
                    <default>true</default>
                    <label>Unknown</label>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TotalAbsences__c</fullName>
        <inlineHelpText>All sessions tutor did not attend across all engagements</inlineHelpText>
        <label>Total Absences</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TotalAttendances__c</fullName>
        <inlineHelpText>Total attendances across all engagements</inlineHelpText>
        <label>Total Attendances</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Hours__c</fullName>
        <label>Total Hours</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Paid_2018_19__c</fullName>
        <label>Total Paid 2018-19</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Paid_All_Time__c</fullName>
        <label>Total Paid All Time</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Tutor_Secondary_Skill_Set__c</fullName>
        <label>Tutor Secondary Skill Set</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>English</fullName>
                </value>
                <value>
                    <fullName>Maths</fullName>
                </value>
                <value>
                    <fullName>Science</fullName>
                </value>
                <value>
                    <fullName>AP / LAC</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Tutor_Start_Date__c</fullName>
        <label>Tutor Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Tutor_Status__c</fullName>
        <label>Tutor Status</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>Alumni</fullName>
                </value>
                <value>
                    <fullName>Inactive - Year Abroad</fullName>
                </value>
                <value>
                    <fullName>Inactive - Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Tutoring_Online__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Tutoring Online</label>
        <type>Checkbox</type>
    </fields>
</CustomObject>